--- a/public/css/takeStyle.css
+++ b/public/css/takeStyle.css
@@ -230,3 +230,30 @@ button {
     border-radius: 8px;
     border: 4px solid black;
 }
+
+@media(max-width:768px) {
+    
+    .username,
+.email,
+.password,
+.email-login,
+.password-login {
+    padding: 5px;
+    border: none;
+    margin: 16px;
+    width: 60vw;
+    border-radius: 8px;
+    font-size: .7em;
+}
+
+.title {
+    text-align: center;
+    align-items: center;
+    top: 8%;
+    left:50%;
+    position: absolute;
+    color: rgba(255, 68, 0, 0.705);
+    font-size: 1.4em;
+    transform: translate(-50%, 0);
+}
+}
