--- a/public/css/egg.css
+++ b/public/css/egg.css
@@ -289,6 +289,7 @@ footer{
 
     .writePost{
         width: 70vw;
+        
     }
 
     .nav .userLog{
@@ -299,7 +300,7 @@ footer{
     .newBlogs {
         width: 86vw;
         margin-left: 6%;
-        height: 25vh !important;
+        height: 33% !important;
     }
 
     .makePost--container{
@@ -308,5 +309,14 @@ footer{
 
     .blogDetails{
         width: 86vw;
+        height: 91%;
+    }
+
+    .latest{
+        margin-left: 11%;
+        font-size: 1.2rem;
+        margin-top: 60px;
+        border-left: 2px solid orange;
+        padding: 5px;
     }
 }
