--- a/public/css/egg.css
+++ b/public/css/egg.css
@@ -242,6 +242,111 @@ footer{
 
 }
 
+/* Styling for the Dashboard */
+
+.recentPost{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 1100px;
+    margin: 5% auto;
+    height: 80vh;
+    width: 85vw;
+    border-radius: 12px;
+    background-color: rgba(160, 98, 17, 0.082);
+}
+
+.dash{
+    display: flex;
+    align-items: center;
+    color: rgba(255, 166, 0, 0.787);
+    border-bottom: 2px solid yellow;
+    justify-content: space-evenly;
+}
+
+.userId{
+    display: none;
+}
+
+.userBlogs {
+    position: relative;
+    margin-bottom: 8px;
+    display: flex;
+    flex-direction: column;
+    margin-top: 4.3rem;
+    border: 3px solid black;
+    width: 50vw;
+    margin-left: 1rem;
+    height: 30vh;
+    box-shadow: 2px 3px 4px rgb(0, 9, 128);
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    border-radius: .8rem;
+    padding: .3rem;
+    max-height: 25vh;
+}
+
+.edit{
+    position: flex;
+    align-items: flex-end;
+    justify-content: end;
+    background-color: rgba(3, 98, 3, 0.87);
+    max-width: 4rem;
+    margin-top: 1.1rem !important;
+    /* margin-left: 23rem; */
+    border-radius: 10px;
+    padding: 5px;
+    color: white;
+}
+
+.edit:hover{
+    color: chartreuse;
+    transition: .5s;
+    font-weight: bolder;
+}
+
+.theEditTitle{
+    border-radius: 9px;
+    width: 20vw;
+    height: 2.2rem;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 1.4rem;
+    display: block;
+    margin-top: 5%;
+    padding: 3px;
+    
+}
+
+.theEditDescription{
+    padding: 3px;
+    font-size: 1.2rem;
+    border-radius: 9px;
+    width: 40vw;
+    font-family: 'Times New Roman', Times, serif;
+    animation: slide;
+    animation-duration: .5ms;
+
+}
+
+@keyframes slide {
+    0% {
+        opacity: 0;
+    }
+    50%{
+        opacity: .5;
+    }
+    100%{
+        opacity: 1;
+    }
+    
+}
+
+.hide{
+    display: none;
+}
+
 
 
 /* Media query for responsive look */
