--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -32,6 +32,7 @@
 
 				<ul class="nav">
 					<li><a href="/">Home</a></li>
+                    <li><a href="/dashboard">Dashboard</a></li>
                     {{#if isMember}}
 					<li><button onclick=logout() class="logOff">Logout</button></li>
                     {{else}}
