--- a/public/css/egg.css
+++ b/public/css/egg.css
@@ -207,6 +207,11 @@ footer{
     color: white;
 }
 
+.del:hover{
+    color: black;
+    box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.589);
+}
+
 .bTitle {
     color: rgb(1, 1, 141);
     border-bottom: .1rem solid rgb(223, 17, 17);
@@ -289,13 +294,13 @@ footer{
 }
 
 .edit{
-    position: flex;
+    position: absolute;
     align-items: flex-end;
     justify-content: end;
     background-color: rgba(3, 98, 3, 0.87);
     max-width: 4rem;
-    margin-top: 1.1rem !important;
-    /* margin-left: 23rem; */
+    margin-top: 1.2rem !important;
+    margin-left: 41rem;
     border-radius: 10px;
     padding: 5px;
     color: white;
