--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -5,7 +5,7 @@
                     <input class="userId" value="{{theUserId}}">
                     <input class="userCreatedAt" value="{{format_time}}">
                     <input class="blogTitle" placeholder="Title" type="text">
-                    <input class="blogDetails" value="{{theUser}}: " placeholder="What's Crackin'.." type="text">
+                    <input class="blogDetails" placeholder="What's Crackin'.." type="text">
                     {{#if isMember}}
                     <button class="createBtn" onclick="takeTake()">Create</button>
                     {{/if}}
