--- a/public/css/egg.css
+++ b/public/css/egg.css
@@ -218,13 +218,22 @@ footer{
     border-bottom: .1rem solid rgb(223, 17, 17);
 }
 
-.author{
-    display: flex;
+.theUserName{
+    position: absolute;
     border: none;
-    margin-left: 22rem;
+    color: rgb(19, 148, 37);
+    top: 27;
+    font-size: 1.4rem;
+    font-style: italic;
+    margin-left: 81%;
     background-color: transparent;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
    
+}
+
+.postedBy{
+    font-size: 1rem;
+    color: rgba(82, 74, 48, 0.945);
 }
 
 .userLog{
@@ -304,6 +313,29 @@ footer{
     border-radius: .8rem;
     padding: .3rem;
     max-height: 25vh;
+}
+
+.commentBubble{
+    position: absolute;
+    bottom: 3;
+    margin: 5px;
+    filter: sepia(330%);
+    height: 30px;
+    width: 36px;
+    border-radius: 50%;
+    box-shadow: 5px 2px 3px rgb(77, 77, 9);
+}
+
+.commentArea{
+   background-color: rgba(255, 255, 255, 0.301);
+   bottom: 0;
+   position: absolute;
+   width: 50vw;
+   left: 50%;
+   transform: translate(-50%, 0);
+   height: 11vh;
+   margin-top: 50%; 
+   border-radius: 8px;
 }
 
 .edit{
