--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -17,10 +17,19 @@
                     </p>
                     <p class="theUserName"><span class="postedBy">posted by: </span>{{blog.usertake.username}}</p>
                     <img onclick="makeComment({{blog.id}})" class="commentBubble"  src="/img/two-speech-bubbles.png" alt="">
-                    <input class="hide commentArea" id="{{blog.id}}" placeholder="Comment Here..." type="text">
+                    <input class="hide commentArea" id="theComment{{blog.id}}" placeholder="Comment Here..." type="text">
+                    <input class="userId" value="{{user_id}}">
+                    <input class="blogId" value="{{blog.id}}">
+                    <input class="blogUserName" id="blogUserName{{blog.id}}" value="{{blog.usertake.username}}">
+                    <input class="hide commentTheBtn" id="theBtn{{blog.id}}" type="SUBMIT" onclick="makeAComment({{blog.id}})">
                 </div>
                 {{/each}}
         </header>
+        <main>
+            {{#each dbCommentsData as |comments|}}
+            <p>{{comments.dataValues.description}}</p>
+            {{/each}}
+        </main>
         <footer>&copy;SirRel1</footer>
    
 <script src="/js/nuComment.js"></script>
