--- a/public/css/egg.css
+++ b/public/css/egg.css
@@ -220,6 +220,7 @@ footer{
 }
 
 .bDescript{
+    margin-top: 5px;
     font-size: 1rem;
 }
 
@@ -496,11 +497,12 @@ footer{
 @media(max-width:768px) {
 
     .bTitle{
-        font-size: 1.2rem;
+        font-size: 1rem;
     }
 
     .bDescript{
-        font-size: 1rem;
+        margin-top: 7px;
+        font-size: .9rem;
     }
 
     .hamburger {
@@ -541,8 +543,9 @@ footer{
     }
 
     .nav .userLog{
-        margin-left: 67%;
+        margin-left: 35%;
         position: relative;
+        color: rgba(255, 255, 255, 0.5);
     }
 
     .newBlogs {
@@ -574,18 +577,23 @@ footer{
         justify-content: end;
         background-color: rgba(3, 98, 3, 0.87);
         max-width: 4rem;
-        margin-top: 8.9rem !important;
-        margin-left: 13.8rem;
+        margin-top: 7.9rem !important;
+        margin-left: 8.8rem;
         border-radius: 10px;
         padding: 5px;
         color: white;
+    }
+
+    a {
+       text-decoration: none;
+       color: rgba(0, 183, 255, 0.452) 
     }
 
     .del {
         position: absolute;
         left: 0;
         max-width: 4rem;
-        margin-top: 8.9rem !important;
+        margin-top: 7.9rem !important;
         margin-left: 1rem;
         border-radius: 10px;
         background-color: red;
@@ -595,7 +603,7 @@ footer{
 
     .timestamp{
         position: absolute;
-        font-size: .5rem;
+        font-size: .7rem;
         right: 11;
         bottom: 2;
         margin-top: -3%;
@@ -609,8 +617,8 @@ footer{
         flex-direction: column;
         margin-top: 4.3rem;
         border: 3px solid rgba(0, 0, 0, 0.596);
-        width: 80vw;
-        margin-left: 1rem;
+        width: 91vw;
+        margin-left: 0rem;
         height: 30vh;
         box-shadow: 2px 3px 4px rgb(0, 9, 128);
         word-wrap: break-word;
@@ -641,6 +649,15 @@ footer{
    
 }
 
+.dash{
+    font-size: 1.6rem;
+    display: flex;
+    align-items: center;
+    color: rgba(255, 166, 0, 0.787);
+    border-bottom: 2px solid yellow;
+    justify-content: space-evenly;
+}
+
     .theEditTitle{
         border-radius: 9px;
         width: 36vw;
@@ -665,25 +682,40 @@ footer{
     }
 
     .commentsBox{
-        padding: 8px;
-        line-height: 122%; 
-        overflow: auto; 
-        width: 69vw;
+        position: relative;
+        overflow-y: scroll !important;
+        padding: 11px;
+        line-height: 222%;
+        width: 72vw;
         align-items: center;
         justify-content: center; 
-        height: 91vh;
+        height: 34vh;
         border-radius: 12px;
         margin-left: 12%;
-        margin-top: -19%;
+        margin-top: -34%;
+        box-shadow: 2px 2px 2px rgba(245, 210, 10, 0.486);
         background-color: rgba(223, 210, 210, 0.863); 
+    }
+
+    .commentTheBtn{
+        position: absolute;
+        z-index: 3;
+        width: 51px;
+        border-radius: 11px;
+        margin-left: 77.7%;
+        margin-top: 36%;
+        color: rgb(32, 168, 66);
+        padding: 3px;
+        margin-right: 5%;
     }
 
     .userComments{
         position: absolute;
-        font-size: .6rem;
+        font-size: .8rem;
         left: 50%;
         bottom: 25;
-        width: 68vw;
+        height: 23.7vh;
+        width: 70vw;
         margin-top: 5px;
         color: rgba(2, 119, 2, 0.965);
         transform: translate(-50%, 0);
@@ -691,13 +723,18 @@ footer{
     }
     
     .commentDescript{
-        
+        position: fixed;
+        overflow-y: scroll;
+        display: flexbox;
         color: rgba(1, 69, 158, 0.828);
+        line-height: 17px;
         border: 2px solid rgba(0, 0, 0, 0.301);
+        margin-top: 18px;
+        margin-bottom: 8px;
         border-radius: 8px;
-        margin-left: -.5%;
-        max-width: 100vw;
-        background-color: rgba(173, 149, 10, 0.294);
+        margin-left: -.1%;
+        width: 49vw;
+        background-color: rgba(110, 199, 8, 0.102);
         padding: 2px;
     }
 
