--- a/public/css/egg.css
+++ b/public/css/egg.css
@@ -685,21 +685,21 @@ footer{
         position: relative;
         overflow-y: scroll !important;
         padding: 11px;
-        line-height: 222%;
+        line-height: 233%;
         width: 72vw;
         align-items: center;
         justify-content: center; 
-        height: 34vh;
+        height: 33vh;
         border-radius: 12px;
         margin-left: 12%;
-        margin-top: -34%;
+        margin-top: -46%;
         box-shadow: 2px 2px 2px rgba(245, 210, 10, 0.486);
         background-color: rgba(223, 210, 210, 0.863); 
     }
 
     .commentTheBtn{
         position: absolute;
-        z-index: 3;
+        z-index: 88;
         width: 51px;
         border-radius: 11px;
         margin-left: 77.7%;
@@ -714,7 +714,7 @@ footer{
         font-size: .8rem;
         left: 50%;
         bottom: 25;
-        height: 23.7vh;
+        height: 18.8vh;
         width: 70vw;
         margin-top: 5px;
         color: rgba(2, 119, 2, 0.965);
@@ -725,12 +725,12 @@ footer{
     .commentDescript{
         position: fixed;
         overflow-y: scroll;
-        display: flexbox;
+        /* display: flexbox; */
         color: rgba(1, 69, 158, 0.828);
         line-height: 17px;
         border: 2px solid rgba(0, 0, 0, 0.301);
         margin-top: 18px;
-        margin-bottom: 8px;
+        margin-bottom: 11px;
         border-radius: 8px;
         margin-left: -.1%;
         width: 49vw;
